@@ -10,7 +10,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkMacOSXButton.c,v 1.6 2003/09/30 23:26:09 wolfsuit Exp $
+ * RCS: @(#) $Id: tkMacOSXButton.c,v 1.7 2003/10/10 20:19:51 hobbs Exp $
  */
 
 #include "tkButton.h"
@@ -421,15 +421,15 @@ TkpDisplayButton(
                     y += dpPtr->offset;
                 }
 		imageXOffset += x;
-		imageXOffset += y;
+		imageYOffset += y;
                 if (butPtr->image != NULL) {
                     if ((butPtr->selectImage != NULL) &&
                             (butPtr->flags & SELECTED)) {
                         Tk_RedrawImage(butPtr->selectImage, 0, 0, width,
-                                height, pixmap, x, y);
+                                height, pixmap, imageXOffset, imageYOffset);
                     } else {
                         Tk_RedrawImage(butPtr->image, 0, 0, width, height,
-                                pixmap, x, y);
+                                pixmap, imageXOffset, imageYOffset);
                     }
                 } else {
                     XSetClipOrigin(butPtr->display, dpPtr->gc, x, y);
